--- a/main.html
+++ b/main.html
@@ -11,27 +11,27 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	
-<h1>Shaw's News</h1>
+<header>Shaw's News</header>
 	<div class="box">
-		<div class="a">
+		<section class="a">
 			<h3>Latest News Articles</h3><br>
 			<ul>
 				<li>Artical 1</li>
 				<li>Artical 2</li>
 				<li>Artical 3</li>
 			</ul>
-		</div>
-	<div class="b">
-			<h3>Main Article</h3><br>
+		</section>
+	<section class="b">
+			<h2>Main Article</h2><br>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
-		</div>
+		</section>
 		
-	<div class="c">
+	<section class="c">
 			<h3>Pictorial News</h3><br>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"/><br>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"><br>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG"><br>		
-		</div>
+		</section>
 
 	</div>	
 </body>
