--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 	
 <header>Shaw's News</header>
 	<div class="box">
-		<section class="a">
+		<section class="latest-news-section">
 			<h3>Latest News Articles</h3><br>
 			<ul>
 				<li>Artical 1</li>
@@ -26,7 +26,7 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea</p>
 		</section>
 		
-	<section class="c">
+	<section class="pictorial-news-section">
 			<h3>Pictorial News</h3><br>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg"/><br>
 	<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG"><br>
